fixed fade jump

--- a/app/css/home.css
+++ b/app/css/home.css
@@ -44,7 +44,7 @@
     opacity: 1;
 }
 .swap-animation.ng-leave {
-    opacity: 0.5;
+    opacity: 1;
 }
 .swap-animation.ng-leave-active {
     opacity: 0;
